# middleoffice-ibor

./: .env.example  .env.railway.example  .gitignore  AGENTS.md  DEPLOYMENT.md  DESIGN_DECISION_LANGCHAIN_RAG.md  ENVIRONMENT.md  FROZEN_ENV_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_REPORT.md  QUICK_START.md  README.md  RELEASE_NOTES.md  Requirements.txt  SECURITY.md  SECURITY_QUICK_START.md  UI_SETUP_GUIDE.md  cheatsheet.md  docker-compose.yml  load_all.sh  railway.toml  railway.yml  setup.sh  start.sh  start_all.sh  stop_all.sh  test.sh
.claude/: settings.json
ai-gateway/: .env  .env.example  README.md  config.yaml  pyproject.toml
ai-gateway/scripts/: add_init_files.sh  bootstrap.sh  clean_pycache.sh  ensure_packages.py  start_project.sh
ai-gateway/src/ai_gateway/: __init__.py  app.py  config.py  main.py
ai-gateway/src/ai_gateway/agents/: analyst.py  data_agent.py  orchestrator.py  orchestrator_interface.py  rag_agent.py
ai-gateway/src/ai_gateway/clients/: ibor_client.py
ai-gateway/src/ai_gateway/config/: settings.py
ai-gateway/src/ai_gateway/controller/: analyst.py
ai-gateway/src/ai_gateway/infra/: db.py  tracing.py
ai-gateway/src/ai_gateway/model/: rag_models.py  schemas.py
ai-gateway/src/ai_gateway/openai/: analyst_chat_agent.py  analyst_llm_agent.py  routing_models.py  tool_runners.py
ai-gateway/src/ai_gateway/rag/: local_store.py  models.py  rag_service.py  sql.py
ai-gateway/src/ai_gateway/repository/: ibor_repository.py
ai-gateway/src/ai_gateway/routes/: analyst_llm_router.py  analyst_router.py  hybrid_router.py
ai-gateway/src/ai_gateway/schemas/: __init__.py  common.py  hybrid.py
ai-gateway/src/ai_gateway/service/: ibor_service.py  llm_service.py  market_tools.py
ai-gateway/src/ai_gateway/tools/: structured.py
ai-gateway/src/ai_gateway/utils/: __init__.py  jsonable.py
ai-gateway/tests/: db_test.py
ai-gateway/tests/rag/: test_local_store.py
cloudformation/: 1-network.yaml  2-rds.yaml  3-ecs.yaml  4-frontend.yaml  demo.yaml
docker/: Dockerfile.pgvector
ibor-ai-gateway/: .dockerignore  Dockerfile  README.md  config.yaml  pyproject.toml  railway.toml  setup-env.sh
ibor-client/: IBOR_api_tests.http  README.md  angular.json  package-lock.json  package.json
ibor-db/: Dockerfile
ibor-middleware/: .dockerignore  .gitignore  Dockerfile  (+2 more)
(+311 files in other folders)
